# FITON-backend

./: .env.example  .gitignore  LICENSE  README.md  compose.yaml  ingest-pipeline.md  winning_features.md
client/: Dockerfile  index.html  next.config.ts  package.json
client-1/src/components/: Dialectic.tsx
client/.next/: _events.json  prerender-manifest.json  trace
client/.next/cache/: config.json
client/.next/server/: server-reference-manifest.js  server-reference-manifest.json
client/.next/server/app/: page.js  page_client-reference-manifest.js
client/.next/server/app/page/: app-build-manifest.json
client/.next/server/chunks/ssr/: [root-of-the-server]__e7907fc1._.js.map  _683e5e81._.js  _683e5e81._.js.map  _8c848469._.js  _8c848469._.js.map  node_modules_next_dist_205e1825._.js.map  node_modules_next_dist_6c806ec7._.js.map  node_modules_next_dist_client_components_1d333787._.js.map  node_modules_next_dist_compiled_next-devtools_index_a19313bf.js.map
client/.next/static/chunks/: _0480cc10._.js  _0480cc10._.js.map  app_globals_71f961d1.css  app_globals_71f961d1.css.map  app_page_tsx_149f6574._.js  node_modules_next_dist_client_cf1d9188._.js.map  node_modules_next_dist_compiled_5150ccfd._.js.map  node_modules_next_dist_compiled_next-devtools_index_a9cb0712.js  node_modules_next_dist_compiled_next-devtools_index_a9cb0712.js.map
client/app/: globals.css  layout.tsx  page.tsx
client/components/ArgumentPanel/: ArgumentPanel.tsx  index.ts
client/components/TranscriptPanel/: TranscriptPanel.tsx  index.ts
client/lib/: socket.ts
client/src/: App.tsx  index.css
client/src/components/: AppLayout.css  AppLayout.tsx  Dialectic.css  Dialectic.tsx  NavDrawer.css  NavDrawer.tsx  PreSessionBriefing.css  PreSessionBriefing.tsx
client/src/context/: SidebarContext.tsx
client/src/hooks/: useConversationSocket.ts
client/src/pages/: Chat.css  Chat.tsx  ConversationDetail.css  ConversationDetail.tsx  ConversationHistory.css  ConversationHistory.tsx  Index.tsx  Prepare.css  Prepare.tsx
client/src/styles/: layout.css
database/: restore-db.sh
database/init/: 001_create_users_table.sql  002_add_profile_text_to_users.sql
db/: dump-db.sh
docs/: frontend-integration.md
server/: Dockerfile  config.py  db.py  main.py  pyproject.toml
server/data_access/: database.py
server/data_access/models/: __init__.py  user.py
server/migrations/versions/: 4e579e0e5416_create_users_table.py
server/models/: db.py  turn.py
server/routes/: briefing.py  chat.py  conversations.py  endpoints.py  user.py
server/schemas/: user.py
server/services/: auth.py  claude.py  diarization.py  elevenlabs.py
server/ws/: conversation.py
